# mlx-qsdpa

./: LICENSE  README.md  pyproject.toml
mlx_qsdpa/: __init__.py  __main__.py  batch_cache.py  bench.py  bench_comparison.py  bench_configs.py  bench_output.py  bench_reference.py  cache.py  cache_common.py  dispatch.py  kernels.py  rotating_cache.py  single_cache.py
mlx_qsdpa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlx_qsdpa/benchmarks/: __init__.py  bench.py  bench_comparison.py  bench_configs.py  bench_output.py  bench_reference.py
tests/: conftest.py  test_2pass.py  test_batch_rotating_cache.py  test_bench.py  test_bench_comparison.py  test_cache.py  test_cache_sdpa.py  test_correctness.py  test_formats.py  test_long_context.py  test_metadata_contract.py  test_rotating_cache.py  test_rotating_sdpa_integration.py  test_shapes.py
