[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlx-qsdpa"
version = "0.3.2"
description = "Quantized SDPA decode kernel for MLX on Apple Silicon"
requires-python = ">=3.10"
dependencies = ["mlx>=0.21.0"]

[project.optional-dependencies]
dev = ["pytest"]
bench = ["mlx-lm>=0.20.0"]

[tool.setuptools]
packages = ["mlx_qsdpa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
